MPLAB X IDE Project

--- a/Capstone_Project/nbproject/Makefile-genesis.properties
+++ b/Capstone_Project/nbproject/Makefile-genesis.properties
@@ -1,13 +1,14 @@
 #
-#Tue Apr 12 17:40:22 EDT 2022
-default.languagetoolchain.version=1.70
-default.Pack.dfplocation=C\:\\Users\\teebo\\.mchp_packs\\Microchip\\dsPIC33CK-MP_DFP\\1.7.208
+#Tue Apr 26 15:57:30 EDT 2022
+default.languagetoolchain.version=2.00
+default.Pack.dfplocation=C\:\\Users\\johnm\\.mchp_packs\\Microchip\\dsPIC33CK-MP_DFP\\1.7.208
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v1.70\\bin
-host.id=n2rf-obgo-y
-configurations-xml=20e6f053e25ae4551a4a88c4aca627b6
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5232c20b48df3223daf8c79e5b83e9a8
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v2.00\\bin
+host.id=1vm4-jxgn-t8
+configurations-xml=77ddcdb73d34216633b2e25017171a81
+default.com-microchip-mplab-mdbcore-pkobskde-PKOBSKDEDbgToolManager.md5=6fe67a8573f9e45881d42de0434504db
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
 user-defined-mime-resolver-xml=none
-proj.dir=C\:\\Users\\teebo\\MPLABXProjects\\Capstone_Project
+proj.dir=C\:\\Users\\johnm\\Downloads\\Capstone-main\\Capstone-main\\Capstone_Project
 host.platform=windows
-default.com-microchip-mplab-nbide-toolchain-xc16-XC16LanguageToolchain.md5=011e7d7f2217ee6d4a28eb1eb36c01b4
+default.com-microchip-mplab-nbide-toolchain-xc16-XC16LanguageToolchain.md5=fd9a88e47a97c4160fac1f8f06a23d1b
